# targetcompass

./: .gitignore  README.md  README_CN.md  START_TARGETCOMPASS.bat  START_TARGETCOMPASS_MCP_HTTP.bat  TargetCompass_Lite_MVP_个人电脑落地实施案_完成版.docx  pyproject.toml  tc_lite.py
docs/: GITHUB_RELEASE_NOTES_V5_CN.md  PROJECT_FILE_GUIDE_CN.md  user_guide.md  (+22 more)
external_agents/bioinfo-agent-system/bioinfo-agent-system/: README.md  pyproject.toml
external_agents/bioinfo-agent-system/bioinfo-agent-system/agents/01_scientific_question_normalizer/: README.md  agent.md  eval_cases.jsonl  examples.jsonl  input.schema.json  output.schema.json
external_agents/bioinfo-agent-system/bioinfo-agent-system/agents/02_scope_ontology_resolver/: README.md  agent.md  eval_cases.jsonl  examples.jsonl  input.schema.json  output.schema.json
external_agents/bioinfo-agent-system/bioinfo-agent-system/evals/: cross_agent_cases.jsonl  expected_gate_failures.jsonl  question_normalization_cases.jsonl
external_agents/bioinfo-agent-system/bioinfo-agent-system/examples/: input_question_sarcopenia_muscle_sasp_surface.txt  input_question_t2d_adipose_secretome.txt
external_agents/bioinfo-agent-system/bioinfo-agent-system/references/: agents.md  bioinfo_question_types.md  claim_strength_taxonomy.md  dataset_feasibility_rules.md  forbidden_inference_rules.md  gate_rules.md  method_extraction_rules.md  method_motif_rules.md  ontology_sources.md  research_plan_rules.md
external_agents/bioinfo-agent-system/bioinfo-agent-system/scripts/: audit_claim_ceiling.py  run_evals.py  run_mock_pipeline.py  validate_all.py
(+506 files in other folders)
